# simple-chat

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  specifications.md
dnas/conversation/workdir/: dna.yaml
dnas/conversation/zomes/coordinator/message/: Cargo.toml
dnas/conversation/zomes/coordinator/message/src/: all_messages.rs  lib.rs  message.rs
dnas/conversation/zomes/coordinator/profile/: Cargo.toml
dnas/conversation/zomes/coordinator/profile/src/: all_profiles.rs  lib.rs  profile.rs
dnas/conversation/zomes/integrity/message/: Cargo.toml
dnas/conversation/zomes/integrity/message/src/: lib.rs  message.rs
dnas/conversation/zomes/integrity/profile/: Cargo.toml
dnas/conversation/zomes/integrity/profile/src/: lib.rs  profile.rs
tests/src/conversation/message/: all-messages.test.ts  common.ts  message.test.ts
tests/src/conversation/profile/: all-profiles.test.ts  common.ts  profile.test.ts
ui/src/: App.svelte
ui/src/conversation/message/: AllMessages.svelte  CreateMessage.svelte  EditMessage.svelte  MessageDetail.svelte  types.ts
ui/src/conversation/profile/: AllProfiles.svelte  CreateProfile.svelte  EditProfile.svelte  Profile.svelte  ProfileDetail.svelte  profile.store.ts  types.ts
workdir/: happ.yaml  web-happ.yaml
